Update and rename 2017-05-22-0001.md to 2017-05-22-0002.md

--- a/blog/_posts/2017-05-22-0002.md
+++ b/blog/_posts/2017-05-22-0002.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "C/C++ Brasil Weekly #2"
-published: false
+published: true
 ---
 
 ## A seleção semanal que reúne as novidades sobre o desenvolvimento C/C++ no Brasil e no mundo
