Correção de erro de digitação
Correção de erro de digitação no item "Dicas de como programar para Windows no Linux" em 2017-06-05-0004.md

--- a/blog/_posts/2017-06-05-0004.md
+++ b/blog/_posts/2017-06-05-0004.md
@@ -32,7 +32,7 @@ _Indicado por @andrelrt_
 
 ### [Dicas de como programar para Windows no Linux](http://nosubstance.me/post/coding-windows-cpp-on-linux/)
 
-Dicas de como programar para linux dentro do linux.
+Dicas de como programar para Windows dentro do linux.
 
 _Indicação do prório autor @oblitum_
 
